[package]
name = "zkper"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "zkper-base",
    "zkper-curves",
    "zkper-snarks",
    "zkper-snarks/zkper-groth16",
]

[workspace.dependencies]
zkper-base = { path = "zkper-base" }
zkper-curves = { path = "zkper-curves" }

lazy_static = "1.5.0"

rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"

rug = { version = "1.26.1" }

[dependencies]
rug = { workspace = true, features = ["integer", "num-traits"] }
lazy_static.workspace = true
