[package]
name = "zkper"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "zkper-base",
    "zkper-curves", "zkper-finite-field",
    "zkper-integer",
    "zkper-modular",
    "zkper-rand",
    "zkper-snarks",
    "zkper-snarks/zkper-groth16",
]

[workspace.dependencies]
zkper-rand = { path = "zkper-rand" }
zkper-integer = { path = "zkper-integer" }
zkper-base = { path = "zkper-base" }
zkper-curves = { path = "zkper-curves" }

anyhow = { version = "1.0.89", features = ["backtrace"] }
thiserror = "1.0.64"

lazy_static = "1.5.0"

rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"

rug = { version = "1.26.1" }
num-traits = "0.2.19"

serde = "1.0.210"
serde_json = "1.0.128"

primal = "0.3.3"

enum_dispatch = "0.3.13"

[dependencies]
rug = { workspace = true, features = ["integer", "num-traits"] }
lazy_static.workspace = true
num-traits.workspace = true
thiserror.workspace = true
