[package]
name = "zkper-base"
version = "0.1.0"
edition = "2021"

[dependencies]
zkper-rand.workspace = true
zkper-integer.workspace = true

rand.workspace = true
rand_chacha.workspace = true
primal.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
enum_dispatch.workspace = true
