[package]
name = "zkper-curves"
version = "0.1.0"
edition = "2021"

[dependencies]
zkper-base.workspace = true

lazy_static.workspace = true
rug = { workspace = true, features = ["integer", "num-traits"] }
num-traits.workspace = true

rand_core.workspace = true
rand.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
