[package]
name = "zkper-groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
zkper-base.workspace = true
zkper-curves.workspace = true
zkper-integer.workspace = true
zkper-rand.workspace = true

anyhow.workspace = true

rug = { workspace = true, features = ["integer", "num-traits"] }

rand.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
